@@ -101,14 +101,17 @@ CTRL-N		Find next keyword (see |i_CTRL-N|).
 CTRL-P		Find previous keyword (see |i_CTRL-P|).
 
 CTRL-R {register}				*i_CTRL-R*
-		Insert the contents of a register.  Between typing CTRL-R and
+		Insert the contents of a register. Between typing CTRL-R and
 		the second character, '"' will be displayed to indicate that
-		you are expected to enter the name of a register.
-		The text is inserted as if you typed it, but mappings and
-		abbreviations are not used.  If you have options like
-		'textwidth', 'formatoptions', or 'autoindent' set, this will
-		influence what will be inserted.  This is different from what
-		happens with the "p" command and pasting with the mouse.
+		you are expected to enter the name of a register. When used
+		with When used with named or clipboard registers
+		(A-Z,a-z,0-9,+) text is inserted literally like pasting with
+		"p". For other registers, the text is inserted as if you typed
+		it, but mappings and abbreviations are not used.  If you have
+		options like 'textwidth', 'formatoptions', or 'autoindent'
+		set, this will influence what will be inserted. This is
+		different from what happens with the "p" command and pasting
+		with the mouse.
 		Special registers:
 			'"'	the unnamed register, containing the text of
 				the last delete or yank
@@ -131,6 +134,8 @@ CTRL-R {register}				*i_CTRL-R*
 				special keys.  E.g., you can use this to move
 				the cursor up:
 					CTRL-R ="\<Up>"
+				you can use this to insert a register as
+				typed with CTRL-R =@reg.
 				Use CTRL-R CTRL-R to insert text literally.
 				When the result is a |List| the items are used
 				as lines.  They can have line breaks inside
